[package]
name = "frontmost"
version = "0.1.0"
edition = "2021"
authors = ["Kieran Llarena"]
description = "A Rust crate for detecting the currently focused application on macOS using NSWorkspace notifications."
license = "MIT"
repository = "https://github.com/kllarena07/frontmost"
keywords = ["macos", "objc"]
categories = ["os", "api-bindings"]

[dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
